--- a/public/index.html
+++ b/public/index.html
@@ -1,16 +1,23 @@
 <!doctype html>
-<htmllang="en">
+<html lang="en">
 
-    <head>
-        <meta charset="UTF-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <meta http-equiv="X-UA-Compatible" content="ie=edge">
-        <title>Endless Runner</title>
-    </head>
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="style.css">
+    <title>Endless Runner</title>
+</head>
 
-    <body>
-        <script src="p5.min.js"></script>
-        <script src="../dist/bundle.js"></script>
-    </body>
+<body>
+    <main class="wrapper">
+        <h1 class="title">Endless Runner v0.1</h1>
+        <div class="game" id="playground"></div>
+        <button class="button" id="restart">Play again</button>
+    </main>
 
-    </html>
+    <script src="p5.min.js"></script>
+    <script src="../dist/bundle.js"></script>
+</body>
+
+</html>
