--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     </main>
 
     <script src="p5.min.js"></script>
-    <script src="../dist/bundle.js"></script>
+    <script src="bundle.js"></script>
 </body>
 
 </html>
